# artGenerator

./: Makefile  README.md  hw2-random-art.cabal
src/: RandomArt.hs  RandomArt.hs~  TailRecursion.hs  TailRecursion.hs~
tests/: #Test.hs#
