name:                random-art
version:             0.1.0.0
synopsis:            Code for Random Art Generator
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     TailRecursion,
                       RandomArt

  -- other-extensions:
  build-depends:       array,
                       base,
                       random,
                       vector,
                       JuicyPixels

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    random,
                    tasty,
                    tasty-hunit,
                    random-art
